fixing map alignment

--- a/Word Classes Geographical Distribution Files/styleSheet.css
+++ b/Word Classes Geographical Distribution Files/styleSheet.css
@@ -250,6 +250,8 @@ body {
 
 	margin-left: auto;
 	margin-right: auto;
+	text-align: center;
+	width: 80%;
 
 }
 
